--- a/project-6/package.json
+++ b/project-6/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "lite-server": "2.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "truffle-assertions": "^0.9.2",
+    "truffle-hdwallet-provider": "^1.0.17"
+  }
 }
